# hapropos

./: CHANGELOG.md  LICENSE  README.md  hapropos.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
hapropos/: README.md  hapropos.cabal
hapropos/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
hapropos/lib/: AST.hs  HOL.hs  LiquidProp.hs  ModalProp.hs  OptString.hs  PLProp.hs  Prop.hs  SmallProp.hs
hapropos/lib/PTT/: TH.hs  named.hs
hapropos/lib/Parse/: MegaParsec.hs
hapropos/lib/Provers/: resolution.hs
hapropos/lib/Typeclasses/: NormalForms.hs  Resolution.hs  Typeclasses.hs
hapropos/lib/lib/: OptString.hs
hapropos/lib/lib/Provers/: resolution.hs
hapropos/lib/lib/Typeclasses/: ByteArray.hs  InferenceRules.hs  Resolution.hs
hapropos/test/: ASTData.txt  PCT.hs  PropTestData.txt  theorem1.txt  theorem2.txt  theorem3.txt  theorem4.txt
lib/: LiquidProp.hs  ModalProp.hs  PLProp.hs  Prop.hs  SmallProp.hs  Typeclasses.hs  hol.hs  typeclasses.hs
lib/PTT/: PropToType.hs  TH.hs
lib/Parse/: MegaParsec.hs  ParseAST.hs
lib/Typeclasses/: ToNormalForm.hs  Typeclasses.hs
test/: htd.txt
