cabal-version:      3.0
name:               hapropos
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           github.com/zorodendron
license:            MIT
license-file:       LICENSE
author:             github.com/zorodendron
-- maintainer:
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Prop, SmallProp, Typeclasses, PTT.TH, LiquidProp, AST, Parse.MegaParsec, 
    -- other-modules:
    -- other-extensions:
    build-depends:    base, 
                      vector ==0.13.1.0,
                      liquidhaskell ==0.9.8.1,
                      megaparsec ==9.6.1,
                      text ==2.1,
                      parser-combinators ==1.3.0,
                      template-haskell

    hs-source-dirs:   lib
    default-language: GHC2021

--test-suite propos-tests
--    type: exitcode-stdio-1.0
--    hs-source-dirs: tests
--    main-is: PCT.hs
--    build-depends: base ^>=4.17.2.1 
--                 , QuickCheck
--                   Propos
--    default-language: GHC2021
  
